--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.0"
     },
     "type": "magento2-module",
+    "version": "2.0.0",
     "license": [
         "Commercial"
     ],
